Fix overall page alignment

--- a/src/pages/ProjectDetailsPage/projectDetailPage.css
+++ b/src/pages/ProjectDetailsPage/projectDetailPage.css
@@ -7,8 +7,8 @@
 }
 
 .projectDetailoutline {
-  margin-right: 10%;
-  margin-left: 10%;
+  margin-right: 25%;
+  margin-left: 25%;
 }
 .row {
   display: flex;
@@ -33,4 +33,8 @@
   height: 18px;
   display: flex;
   align-items: center;
+}
+
+hr {
+  border-top: 2px solid #3d7844;
 }
